# deep_racer_framework

./: .gitignore  AS21_newest_rogue_circuit.txt  Race-Line-Calculation.ipynb  RaceLine_Speed_ActionSpace.ipynb  __init__.py  action-space.ipynb  constants.py  metrics.py  models.py  optimals_newest_rogue_circuit.txt  pyproject.toml  race-line.ipynb  readme.md  requirements.txt  reward_function.py  utils.py  waypoints.xlsx
.idx/: dev.nix
deepracer-on-ec2/custom-files/: run.env  system.env
lib/: optimal.py  plot.py  progress_bar.py  race_line.py  track.py
lib/tracks/: rogue_circuit.npy  rogue_circuit.py
race_lines/: rogue_circuit-race-line-10000-0.8.npy  rogue_circuit-race-line-5-0.8.npy  rogue_circuit-race-line-500-0.8.npy  rogue_circuit-race-line-700-1.npy  rogue_raceway-race-line-700-1.npy
racelines/: ace_speedway.py  rogue_circuit-1500-4-2022-09-07-114033.npy  rogue_circuit-1500-4-2022-09-07-114033.py  rogue_circuit-700-4-2022-09-07-165825.npy  rogue_circuit-700-4-2022-09-07-165825.py
