[tool.poetry]
name = "deepracer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
bpython = "^0.24"
black = "^24.3.0"
ruff = "^0.4.10"
isort = "^5.13.2"
autoflake = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
